--- a/06_Paper/ER-ED/TheoreticalBackground.Rmd
+++ b/06_Paper/ER-ED/TheoreticalBackground.Rmd
@@ -100,7 +100,7 @@ include_graphics(here("06_Paper", "ER-ED", "figures", "Paradigm_Scheme_T2.png" )
 The aim of the present study is to evaluate whether this paradigm is suitable for determining SVs of ER strategies. 
 As a manipulation check, we first want to investigate whether the valence (neutral, negative) of the pictures is effecting subjective and physiological arousal (EMG). <!-- Denise: "or/and physiological valence" see comment below --> Second, we want to check whether the ER strategies distraction, distancing, and suppression effectively reduce subjective and physiological arousal as well as, third, whether they require cognitive effort. 
 The following hypotheses are proposed:
-<!-- es gibt bisher noch keine Begründnung/Einbettung der nachfolgenden Hypothesen. Z.B.: Warum wird Corrugator und Levator untersucht? m.E. müsste oben jeweils noch ein Satz ergänzt werden, warum genau diese Variable in der aktuellen Studie untersucht werden soll.--> <!-- Denise: ja, das hab ich auch bemerkt, ist EMG auch arousal? Dann dies erstens noch einführen und argumentieren und dann auch als physiological arousal aufführen. oder steht corrugator für arousal und levator für valence? dann auch so benennen. Außerdem subjective ratings auch immer konsistent benennen. Ich schlage vor hier in den hypothesen immer von subjective arousal zu sprechen, dies dann im Methodenteil über die subjective ratings operationalisieren (fehlt übrigens im Methodenteil noch.-->
+<!-- es gibt bisher noch keine Begründnung/Einbettung der nachfolgenden Hypothesen. Z.B.: Warum wird Corrugator und Levator untersucht? m.E. müsste oben jeweils noch ein Satz ergänzt werden, warum genau diese Variable in der aktuellen Studie untersucht werden soll.--> <!-- Denise: ja, das hab ich auch bemerkt, ist EMG auch arousal? Dann dies erstens noch einführen und argumentieren und dann auch als physiological arousal aufführen. oder steht corrugator für arousal und levator für valence? dann auch so benennen. Außerdem subjective arousal/ subjective effort auch immer konsistent benennen. Ich schlage vor hier in den hypothesen immer von subjective arousal / effort zu sprechen, dies dann im Methodenteil über die subjective ratings / effort ratings zu operationalisieren (fehlt übrigens im Methodenteil noch.-->
 <!-- Denise: im analysis plan habt ihr auch den vergleich negative vs. neutral (active viewing) beschrieben, deshalb hab ich das hier mal als Hypothese aufgenommen-->
 
 
@@ -109,10 +109,11 @@ The following hypotheses are proposed:
 * H1c) Physiological arousal (EMG *levator* activity) is lower while actively viewing neutral pictures compared to actively viewing negative pictures. 
 <!-- Denise: or physiological valence, see comment above -->
 
-* H2a) Subjective arousal (arousal ratings) is lower after using an ER strategy (distraction, distancing, suppression) compared to active viewing.
-* H2b) Physiological responses in facial EMG that is sensitive to negative emotion (*corrugator* activity) are lower after using an ER strategy (distraction, distancing, suppression) compared to active viewing.
-* H2c) Physiological responses in facial EMG that is sensitive to negative emotion (*levator* activity) are lower after using an ER strategy (distraction, distancing, suppression) compared to active viewing.
-* H3a) Subjective effort (effort ratings) is greater after using an ER strategy (distraction, distancing, suppression) compared to active viewing.
+* H2a) Subjective arousal is lower after using an ER strategy (distraction, distancing, suppression) compared to active viewing.
+* H2b) Physiological arousal <!-- Denise: or physiological valence, see comment above --> (EMG *corrugator* activity) is lower while using an ER strategy (distraction, distancing, suppression) compared to active viewing.
+* H2c) Physiological arousal <!-- Denise: or physiological valence, see comment above --> (EMG *levator* activity) is lower while using an ER strategy (distraction, distancing, suppression) compared to active viewing.
+
+* H3a) Subjective effort is greater after using an ER strategy (distraction, distancing, suppression) compared to active viewing.
 * H3b) The majority of participants re-uses the strategy that was least effortful for them.
 
 Furthermore, we want to investigate whether the following variables predict individual subjective values of ER strategies and whether effort is the best predictor for SVs of ER strategies with the following hypotheses:
