Update Theoretical Background
Rephrased a paragraph on short and long term consequences

--- a/06_Paper/ER-ED/TheoreticalBackground.Rmd
+++ b/06_Paper/ER-ED/TheoreticalBackground.Rmd
@@ -30,13 +30,11 @@ In contrast, distancing as tactic of cognitive change showed the highest effecti
 Moreover, it is known that ER strategies <!-- all these strategies?--> reduce physiological responses of emotions, especially emotional valence as measured via facial electromyography (EMG)[@Zaehringer2020] .
 <!-- hier ist noch der Bezug zum Arousal drin gewesen, habe ich angepasst. Corrugator habe ich raus genommen, weil auch Levator untersucht wird (müssten sonst m.E. beide genannt werden.) Generell fehlt noch etwas die Einbettung, warum die beiden ausgewählt wurden. Soll ich da noch etwas ergänzen? bei Zaehringer wird der Levator überhaupt nicht genannt, die Metaanalyse bezieht sich nur auf den Corrugator. Wir hatten damals gesagt, dass viele der negativen Bilder primär auch recht eklig sind und daher der Levator passender sein könnte, weil er speuzifisch auf Ekel zu reagieren scheint, der Corrugator hingegen auf negative Bilder im Allgemeinen. Prinzipiell haben wir aber für beide die gleichen Hypothesen. Können aber auch warten, was die Reviewer sagen.--> 
 <!-- Denise: Ja das ist noch ein schwächerer Punkt in der Intro. Ich habe auch nur Paper gefunden, die EMG corrugator und levator für negative valence berichten, levator eher für Ekel, aber das muss hier kommen. Ein Satz für EMG reicht nicht aus. Wenn ihr weder auf Valence noch auf Arousal (so wie ich bei den Hypothesen noch vorgeschlagen hatte) hier gehen möchtet, dann könnte man das Konstrukt ja muscle activation o.ä. nennen und dies dann im Methodenteil über EMG corrugator und levator operationalisieren. Ich denke aber, dass die getrennte Analyse der beiden Muskelgruppen nivht gerechtfertig ist, da ihr ja keine getrennten Effekte annehmt, sondern der levator eventuel noch sinnvoll ist, da wir viele Ekelbilder haben. Habt ihr schonmal überlegt einen index über beide Aktivierungen zu bilden und dann darüber die Muskelaktivierung zu operationalisieren? Würde die Hypothesen und auch die Interpretation einfacher machen. Falls das nichts bringt, kann man explorativ immer noch die beiden EMGs getrennt analysieren und dies dann so berichten. -->
-So these tactics from three different strategies proved to be effective in the short term. 
-However, in order to be able to make a statement on their general benefit, longer-term consequences must also be considered. 
-In particular, strategies that do not put the emotional content of the situation into a neutral perspective (i.e., distraction and suppression) are presumed to be disadvantageous in the longer term.
-Longer lasting consequences of self-reported habitual use of ER strategies for affect and well-being have been discussed [@GrossJohn2003]. 
-Especially suppression is generally associated with poorer outcomes (i.e., more negative affect, lower general well-being), which led to the postulation of *adaptive* and *maladaptive* ER strategies.
+Similarly to the differences in short term effectiveness, these tactics from three different strategies are also related to different medium and long-term consequences. 
+In particular, strategies that do not change the emotional content of the situation, for instance by taking a neutral perspective (i.e., distraction and suppression) are presumed to be disadvantageous in the longer term.
+Thus, the self-reported habitual use of suppression is associated with more negative affect and lower general well-being [@GrossJohn2003]. 
+In addition, a number of ER strategies have been associated with mental disorders (for meta-analytic review, see Aldao et al. [@Aldao2010]), which led to the postulation of *adaptive* and *maladaptive* ER strategies.
 For example, it was shown that maladaptive ER strategies mediate the effect between neuroticism and depressive symptoms [@Yoon2013].
-In addition, a number of ER strategies have been associated with mental disorders (for meta-analytic review, see Aldao et al. [@Aldao2010]). 
 
 The postulation of *adaptive* and *maladaptive* ER strategies was put in a new perspective with the concept of ER flexibility.
 Similar to other psychological domains, e.g., attention and goal pursuit, *maladaptive* now refers to inflexible ER strategy use or use of strategies that are hindering goal achievement [@Aldao2015].
